Testsuite/ManualTests/2915/2915.c.lcov
    1|       |/* Functional tests for the function hotpatching feature.  */
    2|       |
    3|       |/* { dg-do compile } */
    4|       |/* { dg-options "-O3 -mzarch" } */
    5|       |
    6|       |int a;
    7|       |
    8|       |__attribute__((hotpatch(0, a))) int
    9|      1|main(void) { /* { dg-error "attribute is not a comma separated pair of
   10|      1|                non-negative integer constants or too large" } */
   11|      1|  return 0;
   12|      1|}

